--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.75 2003/11/20 07:18:05 jaco Exp $
+# $Id: CHANGELOG,v 1.76 2003/11/23 07:00:27 jaco Exp $
 
-* Thu, Nov 20, 2003, 0.5.7-cvs
+* Sun, Nov 23, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -77,6 +77,7 @@
       - Add --usbhome option to always use connected USB flash
         devices as a persistent home
       - Updated URL: http://livecd.berlios.de
+      - Added --timout option to specify boot timeout
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
 
