--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.77 2003/12/03 20:05:24 jaco Exp $
+# $Id: CHANGELOG,v 1.78 2003/12/05 15:04:57 jaco Exp $
 
-* Thu, Dec 04, 2003, 0.5.7-cvs
+* Fri, Dec 05, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -83,6 +83,8 @@
       - Added --sort=<file> option to allow the specification of
         a mkisofs sort-file to optmise the file layout on the
         created LiveCD
+      - Sort the contents of the final iso image, /isolinux goes
+        first, then the cloop image, then the rest
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
 
