--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.80 2003/12/06 17:31:50 jaco Exp $
+# $Id: CHANGELOG,v 1.81 2003/12/07 11:24:54 jaco Exp $
 
-* Fri, Dec 05, 2003, 0.5.7-cvs
+* Sun, Dec 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -88,8 +88,12 @@
         created LiveCD
       - Sort the contents of the final iso image, /isolinux goes
         first, then the cloop image, then the rest
+      - Copy inittab and /sbin/halt to it, to enable the eject of
+        the CD at shutdown
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
+    [rc.sysinit]:
+      - Added (Split commands from linuxrc)
 
 
 * Mon, Oct 06, 2003, 0.5.6
