--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.15 2003/11/03 10:32:31 jaco Exp $
+# $Id: FAQ,v 1.16 2003/12/07 11:24:54 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -252,3 +252,8 @@ A: Mandrake has made a modification to the isolinux program that
    on the mklivecd command-line to enable the use of the correct
    (Mandrake-enhanced) isolinux boot image binary.
 
+
+Q: I don't like the fact that my CD ejects at shutdown - how do I
+   disable this?
+A: Pass the "noeject" parameter on the iso boot prompt, i.e
+   "livecd noeject"
