--- a/mklivecd/TODO
+++ b/mklivecd/TODO
@@ -1,4 +1,4 @@
-# $Id: TODO,v 1.17 2003/12/06 20:41:00 jaco Exp $
+# $Id: TODO,v 1.18 2003/12/07 11:24:54 jaco Exp $
 
 - Add profiles to allow for build of various types of CD's, eg.
   minicd
@@ -7,3 +7,6 @@
 - Localisation support
 - Remove functions in hwdetect where we have duplicated already
   existing MDK functions, e.g. in module loading
+- Cleanup function duplication in rc.sysinit and linuxrc. Done to
+  get rc.sysinit there quickly, these should move into a library
+  for re-use/source, even in halt.local
