--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.87 2003/12/12 15:36:30 jaco Exp $
+# $Id: CHANGELOG,v 1.88 2003/12/12 15:48:41 jaco Exp $
 
 * Sun, Dec 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -96,6 +96,8 @@
       - Create compressed iso MD5 and store it on the iso
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
+      - Synced with MDK contrib spec
+      - Updated description to be more descriptive
     [rc.sysinit]:
       - Added (Split commands from linuxrc)
 
