--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.89 2003/12/13 18:13:05 jaco Exp $
+# $Id: CHANGELOG,v 1.90 2003/12/19 12:53:30 jaco Exp $
 
-* Sat, Dec 13, 2003, 0.5.7-cvs
+* Fri, Dec 19, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -27,6 +27,8 @@
         module: sym53c8xx.o -> sym53c8xx_2.o (Handle both)
       - Fix path of zlib_inflate.o module to work with kernels
         actually providing it
+      - Added loop.o and aes.o (dep. for loop) to be able to mount
+        files (such as squashfs files) with the "-o loop" option
     [Rules.mk]:
       - Created list for default normal and SCSI modules
       - Created listing for optional modules
@@ -74,6 +76,8 @@
       - Use losetup to mount cloop images
       - 'noscsi' boot option disables SCSI probing
       - 'md5' boot option checks cloop MD5 sum
+      - Removed extra .iso. from cloop and bzloop image names
+      - Added squashfs support
     [mklivecd]:
       - Be verbose in depmod command
       - Copy SCSI and optinal modules in addition to normal
@@ -99,10 +103,13 @@
       - Copy inittab and /sbin/halt to it, to enable the eject of
         the CD at shutdown
       - Create compressed iso MD5 and store it on the iso
+      - Removed extra .iso. from cloop and bzloop image names
+      - Added squashfs support
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
       - Synced with MDK contrib spec
       - Updated description to be more descriptive
+      - Added a require for squashfs-tools
     [rc.sysinit]:
       - Added (Split commands from linuxrc)
       - Adapted for use with busybox pre4 (Cooker version)
