--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.91 2003/12/30 20:19:51 jaco Exp $
+# $Id: CHANGELOG,v 1.92 2004/01/05 05:39:02 jaco Exp $
 
-* Thu, Dec 29, 2003, 0.5.7-cvs
+* Mon, Jan 05, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -109,6 +109,7 @@
       - Create compressed iso MD5 and store it on the iso
       - Removed extra .iso. from cloop and bzloop image names
       - Added squashfs support
+      - Perl version of the script
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
       - Synced with MDK contrib spec
