--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.17 2003/12/11 06:48:01 jaco Exp $
+# $Id: FAQ,v 1.18 2004/01/05 05:45:40 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -257,3 +257,15 @@ Q: I don't like the fact that my CD ejects at shutdown - how do I
    disable this?
 A: Pass the "noeject" parameter on the iso boot prompt, i.e
    "livecd noeject"
+
+
+Q: How do I override some of the installation/creation parameters
+   on install? For instance, I want all my created CDs to default
+   to a different keyboard layout without specifying the --keyboard
+   parameter on CD creation.
+A: The Rules.mk makefile defines several parameters that can be
+   overridden on the "make" comman-line when installing mklivecd.
+   For instance, a "make DEF_KEYBOARD=dvorak ; make install" will
+   change your installation to always use the dvorak keyboard
+   layout. Other parameters that can be overridden includes:
+   DEF_RESOLUTION, DEF_VGAMODE and MAX_SPLASH.
