--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.105 2004/01/10 18:27:26 jaco Exp $
+# $Id: CHANGELOG,v 1.106 2004/01/20 13:43:13 jaco Exp $
 
-* Sat, Jan 10, 2003, 0.5.7-cvs
+* Tue, Jan 20, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -79,6 +79,7 @@
       - Adhere to the "nousb", "noscsi" and "nopcmcia" boot options
       - Don't run pcmcia, sound or network boot scripts if not 
         detected, i.e. remove the /etc/rc.d/rc?.d/ links
+      - Reworked module loading to allow for 2.4 and 2.6 USB modules
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
@@ -137,6 +138,7 @@
       - Added --noclean option to not remove temporary files
       - Added uncompressed loop image support
       - Added "normal" option to --resolution
+      - Copy modules.dep if it cannot be created
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
       - Synced with MDK contrib spec
@@ -147,6 +149,7 @@
     [rc.sysinit]:
       - Added (Split commands from linuxrc)
       - Adapted for use with busybox pre4 (Cooker version)
+      - Always run ash when booting to initrd
 
 
 * Mon, Oct 06, 2003, 0.5.6
