--- a/mklivecd/AUTHORS
+++ b/mklivecd/AUTHORS
@@ -1,4 +1,4 @@
-# $Id: AUTHORS,v 1.2 2003/09/29 10:44:57 jaco Exp $
+# $Id: AUTHORS,v 1.3 2004/01/21 08:36:23 jaco Exp $
 
-Buchan Milne <bgmilne@cae.co.za>
+Buchan Milne <bgmilne@obsidian.co.za>
 Jaco Greeff <jaco@linuxminicd.org>
