Added CVS Id tag

--- a/mklivecd/README
+++ b/mklivecd/README
@@ -1,3 +1,5 @@
+# $Id: README,v 1.5 2004/01/27 12:25:56 jaco Exp $
+
 The latest stable version of the package can alway be found at
 the following URL:
 
