--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.121 2004/02/17 06:08:11 jaco Exp $
+# $Id: CHANGELOG,v 1.122 2004/02/25 06:49:00 jaco Exp $
 
-* Tue, Feb 17, 2004, 0.5.7-cvs
+* Wed, Feb 25, 2004, 0.5.7-cvs
   + Buchan Milne <bgmilne@obsidian.co.za>:
     [halt.local]:
       - Added for custom commands to be executed at shutdown, eg.
@@ -157,6 +157,7 @@
       - Removed bzloop option (only 2.4, no benefit over squashfs)
       - --experminetal option supports LiveCDFS
       - --debug option for additional debugging output 
+      - Create /initrd/ramfs instead of doin it later
     [mklivecd.spec]:
       - Updated URL: http://livecd.berlios.de
       - Synced with MDK contrib spec
