--- a/mklivecd/AUTHORS
+++ b/mklivecd/AUTHORS
@@ -1,4 +1,5 @@
-# $Id: AUTHORS,v 1.3 2004/01/21 08:36:23 jaco Exp $
+# $Id: AUTHORS,v 1.4 2004/07/14 14:45:46 jaco Exp $
 
 Buchan Milne <bgmilne@obsidian.co.za>
 Jaco Greeff <jaco@linuxminicd.org>
+Tom Kelly  <tom_kelly33@yahoo.com>
