--- a/livecd-utils/AUTHORS
+++ b/livecd-utils/AUTHORS
@@ -1,3 +1,4 @@
-# $Id: AUTHORS,v 1.2 2003/11/21 13:39:57 jaco Exp $
+# $Id: AUTHORS,v 1.3 2004/07/14 14:58:03 jaco Exp $
 
 Jaco Greeff <jaco@linuxminicd.org>
+Tom Kelly <tom_kelly33@yahoo.com>
