--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,5 @@
-# $Id: CHANGELOG,v 1.148 2005/03/13 22:06:46 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.149 2005/06/02 14:52:50 ikerekes Exp $
+* 2005-06-01 applied Texstar’s fixes to hwdetect, to fix xres and MS wireless mouse not able to move the cursor 			sidewise
 
 * 2005-03-13 removed cdrom from modules list, shortened SATA 
 	     list in hwdetect
