--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,5 @@
-# $Id: CHANGELOG,v 1.149 2005/06/02 14:52:50 ikerekes Exp $
+# $Id: CHANGELOG,v 1.150 2005/06/03 03:12:38 ikerekes Exp $
+* 2005-06-02 added sata_sis to the satalist in hwdetect as per Texstar request
 * 2005-06-01 applied Texstar’s fixes to hwdetect, to fix xres and MS wireless mouse not able to move the cursor 			sidewise
 
 * 2005-03-13 removed cdrom from modules list, shortened SATA 
