--- a/livecd-utils/CHANGELOG
+++ b/livecd-utils/CHANGELOG
@@ -1,4 +1,7 @@
-# $Id: CHANGELOG,v 1.10 2005/06/02 15:13:47 ikerekes Exp $
+# $Id: CHANGELOG,v 1.11 2005/11/01 15:29:04 tom_kelly33 Exp $
+
+* 2005-11-01 Hungarian lang added
+
 * 2005-06-02 various fixes to fix progress-bar in livecd-install, extend satalist, and fix bootsplash creation
 
 * 2005-03-13 works with unionfs, thanks to ikerek & etjr
