Updates, Ivan added as author, new release 0.6.0

--- a/mklivecd/AUTHORS
+++ b/mklivecd/AUTHORS
@@ -1,5 +1,6 @@
-# $Id: AUTHORS,v 1.4 2004/07/14 14:45:46 jaco Exp $
+# $Id: AUTHORS,v 1.5 2006/04/23 01:55:13 tom_kelly33 Exp $
 
 Buchan Milne <bgmilne@obsidian.co.za>
 Jaco Greeff <jaco@linuxminicd.org>
 Tom Kelly  <tom_kelly33@yahoo.com>
+Ivan Kerekes <ikerekes@gmail.com>
