--- a/mklivecd/TODO
+++ b/mklivecd/TODO
@@ -1,9 +1,9 @@
-# $Id: TODO,v 1.18 2003/12/07 11:24:54 jaco Exp $
+# $Id: TODO,v 1.19 2006/04/23 01:55:14 tom_kelly33 Exp $
 
 - Add profiles to allow for build of various types of CD's, eg.
   minicd
 - Cleanup of mklivecd script (some functions exists, creation of
-  initrd is a good canidate)
+  initrd is a good candidate)
 - Localisation support
 - Remove functions in hwdetect where we have duplicated already
   existing MDK functions, e.g. in module loading
